separate-end-point-address-and-favorite-and-refactor-user-reponsonse